# SupplyChainWatch

./: CONTEXT.md  README.md
backend/: pyproject.toml
backend/alembic/versions/: 0002_add_week2_api_analysis_support.py  0003_add_llm_features.py
backend/app/: main.py
backend/app/analysis/: chokepoint_status.py  port_congestion.py
backend/app/api/routes/: indices.py  insights.py  ports.py  vessels.py
backend/app/collectors/: aisstream.py  fred.py
backend/app/schemas/: records.py
backend/app/tasks/: jobs.py
backend/tests/: test_collectors.py
docs/: api_consistency_report.md  architecture.md  demo_script.md  insights.md  report.md  slides.md  week4_checklist.md
frontend/: vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  queries.ts  viewModels.ts
frontend/src/components/: DataState.tsx  MiniMap.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  InsightsHub.tsx  MacroIndices.tsx  Ports.tsx  VesselMap.tsx
frontend/src/styles/: tokens.css
