[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "globalsupplywatch-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "beautifulsoup4>=4.12.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "flower>=2.0.0",
  "geoalchemy2>=0.16.0",
  "httpx>=0.28.0",
  "openai>=1.0.0",
  "pandas>=2.2.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.0",
  "redis>=5.2.0",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.0",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.34.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-httpx>=0.35.0",
  "ruff>=0.8.0",
]
quality = [
  "great-expectations>=1.3.0",
]
ml = [
  "prophet>=1.1.6",
  "scikit-learn>=1.5.0",
  "statsmodels>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-m 'not llm'"
markers = [
  "llm: opt-in tests that call the configured LLM provider",
]
